// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapsDispatchToProps 1`] = `
Object {
  "createComment": [Function],
  "editPost": [Function],
  "fetchPost": [Function],
  "goToCommunity": [Function],
  "showMember": [Function],
  "showTopic": [Function],
}
`;

exports[`mapsDispatchToProps 2`] = `
Array [
  "dispatch",
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: String, $text: String) {
        createComment(data: {postId: $postId, text: $text}) {
          id
          text
          post {
            id
          }
          createdAt
          creator {
            id
          }
        }
      }",
        "variables": Object {
          "postId": "1",
          "text": "some comment",
        },
      },
      "meta": Object {
        "extractModel": "Comment",
        "optimistic": true,
        "postId": "1",
        "tempId": "post1_1",
        "text": "some comment",
      },
      "type": "CommentEditor/CREATE_COMMENT",
    },
  ],
]
`;

exports[`mapsDispatchToProps 3`] = `
Array [
  "navigate",
  Array [
    Object {
      "key": "Feed",
      "params": Object {
        "topicName": "mytopicname",
      },
      "routeName": "Feed",
    },
  ],
]
`;

exports[`mapsDispatchToProps 4`] = `
Array [
  "navigate",
  Array [
    Object {
      "key": "MemberProfile",
      "params": Object {
        "id": 1,
      },
      "routeName": "MemberProfile",
    },
  ],
]
`;

exports[`mapsDispatchToProps 5`] = `
Array [
  "navigate",
  Array [
    Object {
      "key": "PostEditor",
      "params": Object {
        "id": "1",
      },
      "routeName": "PostEditor",
    },
  ],
]
`;

exports[`mapsStateToProps 1`] = `
Object {
  "currentUser": undefined,
  "post": Object {
    "commenters": Array [],
    "communities": Array [
      Object {
        "id": "2",
        "name": "Home",
      },
    ],
    "creator": Object {
      "id": "10",
    },
    "fileAttachments": Array [
      Object {
        "id": "1",
        "post": "1",
        "type": "file",
        "url": "http://foo.com/foo.pdf",
      },
    ],
    "fileUrls": Array [
      "http://foo.com/foo.pdf",
    ],
    "id": "1",
    "imageUrls": Array [
      "http://foo.com/bar.png",
    ],
    "linkPreview": undefined,
    "pinned": undefined,
    "topics": Array [],
  },
}
`;
